# coproc-ros-2018

./: .gitignore  README.md
frc_navigation/: CMakeLists.txt  package.xml
frc_navigation/config/: ekf_params.yaml  teb_local_planner_params.yaml
frc_navigation/config/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
frc_navigation/config/localization/: amcl.yaml  robot_localization_common_params.yaml  robot_localization_map_params.yaml
frc_navigation/launch/: move_base.launch  move_base_debug.launch
frc_navigation/launch/includes/: machines.xml  rplidar.xml
frc_navigation/maps/: lego_lab2.yaml  lego_lab_arr.yaml
frc_navigation/maps/testing/: lego_lab.yaml
frc_navigation/rviz/: config.rviz
frc_navigation/src/: network_tables_publisher.py
vision_pose/: CMakeLists.txt  package.xml
vision_pose/camera_info/: cam_settings.sh  front_camera.yaml
vision_pose/launch/: front_camera.launch
vision_pose/src/: grip.py  opencv_cam.py  rect_test.py
